--- a/src/management/organizers/edit/organizer-edit.html
+++ b/src/management/organizers/edit/organizer-edit.html
@@ -60,7 +60,7 @@
 
     <button type="button"
             class="btn btn-primary organisator-bewerken-bewaren"
-            ng-disabled="oec.disableSubmit"
+            ng-disabled="oec.disableSubmit || oec.contactError"
             ng-click="oec.validateOrganizer()">
         Bewaren
     </button>
