--- a/src/cultuurkuur/event-cultuurkuur.html
+++ b/src/cultuurkuur/event-cultuurkuur.html
@@ -49,7 +49,7 @@
         </div>
         <div class="alert alert-info" ng-if="::$ctrl.isIncomplete && $ctrl.forSchools">
             <p>Vervolledig dit evenement op cultuurkuur.be met extra informatie voor scholen en leerkrachten.</p>
-            <a ng-href="{{::$ctrl.editLink}}" target="_blank" class="btn btn-default btn-info">Doorgaan</a>
+            <a ng-href="{{::$ctrl.continueLink}}" target="_blank" class="btn btn-default btn-info">Doorgaan</a>
         </div>
     </div>
 </div>
