--- a/src/event-detail/ui/booking-info-detail.directive.html
+++ b/src/event-detail/ui/booking-info-detail.directive.html
@@ -1,6 +1,6 @@
 <tr ng-class="::{muted: isEmpty(bookingInfo) || (bookingInfo.phone == null && bookingInfo.email == null && bookingInfo.url == null)}">
     <td>
-        <span class="row-label">Reservatie</span>
+        <span class="row-label">{{translateBookingInfo('label')}}</span>
     </td>
     <td ng-if="hasAtLeastOneContactPoint()">
         <ul class="list-unstyled" >
@@ -16,5 +16,5 @@
             <li ng-if="::bookingInfo.availabilityStarts" > Van {{::bookingInfo.availabilityStarts | date}} tot {{::bookingInfo.availabilityEnds | date}}</li>
         </ul>
     </td>
-    <td ng-if="!hasAtLeastOneContactPoint()">Geen reservatie-informatie</td>
+    <td ng-if="!hasAtLeastOneContactPoint()">{{translateBookingInfo('no_booking')}}</td>
 </tr>
