--- a/src/place-detail/ui/place-detail.html
+++ b/src/place-detail/ui/place-detail.html
@@ -1,18 +1,18 @@
 <div ng-if="placeIdIsInvalid">
   <div class="page-header">
-    <h1>Pagina niet gevonden</h1>
+    <h1>{{translatePlaceDetail('not_found')}}</h1>
   </div>
 
   <div class="row">
     <div class="col-xs-12">
-      <p>Deze pagina kon niet gevonden worden.</p>
+      <p>{{translatePlaceDetail('not_found_help')}}</p>
     </div>
   </div>
 </div>
 
 <div ng-if="!finishedLoading">
   <p class="title"><span class="placeholder-title"></span></p>
-  <p class="text-center"><i class="fa fa-circle-o-notch fa-spin fa-fw"></i><span class="sr-only">Aan het laden...</span></p>
+  <p class="text-center"><i class="fa fa-circle-o-notch fa-spin fa-fw"></i><span class="sr-only">{{translatePlaceDetail('loading')}}</span></p>
 </div>
 
 <div ng-if="place && finishedLoading" class="place-detail">
@@ -24,11 +24,11 @@
         <button ng-if="::permissions.editing"
                 class="list-group-item"
                 type="button"
-                ng-click="openEditPage()"><i class="fa fa-pencil" aria-hidden="true"></i>  Bewerken</button>
+                ng-click="openEditPage()"><i class="fa fa-pencil" aria-hidden="true"></i>  {{translatePlaceDetail('edit')}}</button>
         <button ng-if="::permissions.editing"
                 class="list-group-item"
                 href="#"
-                ng-click="deletePlace()"><i class="fa fa-trash" aria-hidden="true"></i>  Verwijderen</button>
+                ng-click="deletePlace()"><i class="fa fa-trash" aria-hidden="true"></i>  {{translatePlaceDetail('delete')}}</button>
       </div>
     </div>
 
@@ -47,25 +47,25 @@
           </colgroup>
           <tbody>
             <tr>
-              <td><span class="row-label">Titel</span></td>
+              <td><span class="row-label">{{translatePlaceDetail('title')}}</span></td>
               <td>{{::place.name}}</td>
             </tr>
             <tr>
-              <td><span class="row-label">Type</span></td>
+              <td><span class="row-label">{{translatePlaceDetail('type')}}</span></td>
               <td>{{::place.type.label}}</td>
             </tr>
 
             <tr ng-class="::{muted: place.description==undefined}">
-              <td><span class="row-label">Beschrijving</span></td>
+              <td><span class="row-label">{{translatePlaceDetail('description')}}</span></td>
               <td ng-if="::(place.description!==undefined)">
                 <div ng-bind-html="::place.description" class="event-detail-description"></div>
               </td>
               <td ng-if="::(place.description==undefined)">
-                Geen beschrijving
+                {{translatePlaceDetail('no_description')}}
               </td>
             </tr>
             <tr>
-              <td><span class="row-label">Waar</span></td>
+              <td><span class="row-label">{{translatePlaceDetail('where')}}</span></td>
               <td>{{::place.address.streetAddress}}<br />
                 {{::place.address.postalCode}} {{::place.address.addressLocality}}<br />
                 {{::place.address.addressCountry}}</td>
@@ -76,7 +76,7 @@
           <tbody>
             <tr>
               <td>
-                <span class="row-label">Labels</span>
+                <span class="row-label">{{translatePlaceDetail('labels')}}</span>
               </td>
               <td>
                 <p><udb-label-select labels="::place.labels"
@@ -84,10 +84,10 @@
                                   label-removed="labelRemoved(label)">
                 </udb-label-select></p>
                 <p ng-if="labelResponse === 'error'" class="alert alert-danger">
-                  Het toevoegen van het label '{{labelsError.name}}' is niet gelukt.
+                  <span translate="preview.labels_error" translate-values="{ labelName: '{{labelsError.name}}' }"></span>
                 </p>
                 <p ng-if="labelResponse === 'success'" class="alert alert-success">
-                  Het label '{{addedLabel}}' werd succesvol toegevoegd.
+                  <span translate="preview.labels_success" translate-values="{ addedLabel: '{{addedLabel}}' }"></span>
                 </p>
                 <p ng-if="labelResponse === 'unlabelError'" class="alert alert-danger">
                   <span ng-bind="labelsError"></span>
@@ -95,10 +95,10 @@
               </td>
             </tr>
             <tr>
-              <td><span class="row-label">Geschikt voor</span></td>
+              <td><span class="row-label">{{translatePlaceDetail('age_label')}}</span></td>
               <td>
                 <span ng-if="::place.typicalAgeRange">{{::place.typicalAgeRange}}</span>
-                <span ng-if="::(!place.typicalAgeRange)">Alle leeftijden</span>
+                <span ng-if="::(!place.typicalAgeRange)">{{translatePlaceDetail('all_ages')}}</span>
               </td>
             </tr>
           </tbody>
