--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -97,10 +97,7 @@
                 <td><span class="row-label">Waar</span></td>
                 <td ng-show="::event.location.url"><a ui-sref="split.footer.place-preview({id: event.location.id})">{{eventLocation(event)}}</a></td>
                 <td ng-hide="::event.location.url">
-                  {{::event.location.name.nl}},
-                  {{::event.location.address.streetAddress}},
-                  {{::event.location.address.postalCode}}
-                  {{::event.location.address.addressLocality}}
+                  {{eventLocation(event)}}
                 </td>
               </tr>
               <tr>
