III-2394 translate-once for eventForm step1

--- a/src/event_form/steps/event-form-step1.html
+++ b/src/event_form/steps/event-form-step1.html
@@ -3,39 +3,42 @@
   <section id="wat">
     <section class="row">
       <div class="col-md-12">
-        <h2 class="title-border"><span class="number">1</span> {{::translateEventForm('step1', 'title')}}</h2>
+        <h2 class="title-border">
+          <span class="number">1</span>
+          <span translate-once="eventForm.step1.title"></span>
+        </h2>
       </div>
     </section>
 
     <div class="row" ng-show="!activeEventType">
       <div ng-class="splitTypes ? 'col-sm-5': 'col-sm-12'"
            ng-show="splitTypes || eventFormData.getType() === 'event'">
-        <label class="event-type-choser-label event"><span>{{::translateEventForm('step1', 'label_event')}}</span></label>
+        <label class="event-type-choser-label event"><span translate-once="eventForm.step1.label_event"></span></label>
         <ul class="list-inline" id="step1-events">
           <li ng-repeat="eventType in ::eventTypeLabels | orderBy:'label'" ng-show="eventType.primary === true || showAllEventTypes">
             <button ng-bind="::eventType.label" class="btn btn-default"
                     ng-click="setEventType(eventType, true)"></button>
           </li>
           <li ng-hide="showAllEventTypes">
-            <a href="" ng-click="toggleEventTypes()">{{::translateEventForm('step1', 'show_everything')}}</a>
+            <a href="" ng-click="toggleEventTypes()" translate-once="eventForm.step1.show_everything"></a>
           </li>
         </ul>
       </div>
 
       <div class="col-sm-2" ng-show="splitTypes">
-        <p class="text-center event-type-splitter"><em>{{::translateEventForm('step1', 'or')}}</em></p>
+        <p class="text-center event-type-splitter"><em translate-once="eventForm.step1.or"></em></p>
       </div>
 
       <div ng-class="splitTypes ? 'col-sm-5': 'col-sm-12'"
            ng-show="splitTypes || eventFormData.getType() === 'place'">
-        <label class="event-type-choser-label place"><span>{{::translateEventForm('step1', 'location_label')}}</span></label>
+        <label class="event-type-choser-label place"><span translate-once="eventForm.step1.location_label"></span></label>
         <ul class="list-inline" id="step1-places">
           <li ng-repeat="placeType in ::placeLabels | orderBy:'label'" ng-show="placeType.primary == true || showAllPlaces">
             <button ng-bind="::placeType.label" class="btn btn-default"
                     ng-click="setEventType(placeType, false)"></button>
           </li>
           <li ng-hide="showAllPlaces">
-            <a href="" ng-click="togglePlaces()">{{::translateEventForm('step1', 'show_everything')}}</a>
+            <a href="" ng-click="togglePlaces()" translate-once="eventForm.step1.show_everythibng"></a>
           </li>
         </ul>
       </div>
@@ -44,11 +47,15 @@
     <div class="row">
       <p class="col-xs-12 col-md-12" ng-hide="activeEventType === ''">
         <span class="btn-chosen" ng-bind="activeEventTypeLabel"></span>
-        <a class="btn btn-link btn-default" href="" ng-click="resetEventType()">{{::translateEventForm('step1', 'change')}}</a>
+        <a class="btn btn-link btn-default"
+           href="" ng-click="resetEventType()"
+           translate-once="eventForm.step1.change"></a>
       </p>
 
       <div class="col-xs-12" ng-if="canRefine">
-        <label class="event-theme-label" ng-show="eventThemeLabels.length">{{::translateEventForm('step1', 'refine')}}</label>
+        <label class="event-theme-label"
+               translate-once="eventForm.step1.refine"
+               ng-show="eventThemeLabels.length"></label>
         <ul class="list-inline" id="step2-list">
           <li ng-repeat="eventTheme in ::eventThemeLabels">
             <button ng-bind="::eventTheme.label" class="btn btn-default"
@@ -59,7 +66,9 @@
 
       <p class="col-xs-12 col-md-12"  ng-hide="activeTheme === ''">
         <span class="btn-chosen" ng-bind="activeThemeLabel"></span>
-        <a class="btn btn-link btn-default" href="" ng-click="resetTheme()">{{::translateEventForm('step1', 'change')}}</a>
+        <a class="btn btn-link btn-default"
+           href="" ng-click="resetTheme()"
+           translate-once="eventForm.step1.change"></a>
       </p>
     </div>
 
