--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -103,8 +103,11 @@
               <tr>
                 <td><span class="row-label">Wanneer</span></td>
                 <td>
-                    <span ng-if="::(!isEmpty(calendarSummary))" ng-bind-html="calendarSummary"></span>
-                    <span class="text-muted" ng-if="::(isEmpty(calendarSummary))">Probleem bij het ophalen van de kalenderinformatie</span>
+                  <span ng-if="::calendarSummary" ng-bind-html="::calendarSummary"></span>
+                  <span class="text-muted"
+                        ng-if="::(calendarSummary !== undefined ? (calendarSummary === false) : undefined)">
+                      Probleem bij het ophalen van de kalenderinformatie
+                    </span>
                 </td>
               </tr>
               <tr ng-class="::{muted: (!event.organizer)}">
