--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -146,7 +146,7 @@
         </div>
 
         <price-info price="price" ng-if="!hidePriceInfo"></price-info>
-        <uitpas-info organizer="eventFormData.organizer" price="price"></uitpas-info>
+        <uitpas-info organizer="eventFormData.organizer" price="eventFormData.priceInfo"></uitpas-info>
 
         <div class="row extra-contact">
           <div class="extra-task meer-info" ng-class="contactInfoCssClass">
