--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -107,6 +107,7 @@
                     <span aria-hidden="true"> &times;</span>
                   </a>
                 </span>
+                <div ng-if="hasTicketSales" class="alert alert-danger" translate="uitpas.uitpasInfo.cantChangeOrganiser"></div>
               </section>
               <section class="state filling">
                 <div class="form-group">
@@ -145,7 +146,7 @@
           </div>
         </div>
 
-        <price-info price="price" ng-if="!hidePriceInfo"></price-info>
+        <price-info price="price" ng-if="!hidePriceInfo" event-id="eventFormData.id" organizer="eventFormData.organizer"></price-info>
         <uitpas-info organizer="eventFormData.organizer" price="eventFormData.priceInfo"></uitpas-info>
 
         <div class="row extra-contact">
