III-2392 Add error handeling when the hasTicketSales request fails

--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -108,6 +108,7 @@
                   </a>
                 </span>
                 <div ng-if="hasTicketSales" class="alert alert-danger" translate="uitpas.uitpasInfo.cantChangeOrganiser"></div>
+                <div ng-if="hasUitpasError" class="alert alert-danger" translate="uitpas.uitpasInfo.unavailable"></div>
               </section>
               <section class="state filling">
                 <div class="form-group">
