III-2400 Check streetname in step 3

--- a/src/event_form/steps/event-form-step3.html
+++ b/src/event_form/steps/event-form-step3.html
@@ -92,7 +92,7 @@
       <div class="plaats-adres-ingeven" ng-hide="placeStreetAddress">
         <div class="row">
           <div class="col-xs-12">
-            <div class="form-group" ng-class="{'has-error' : showValidation && step3Form.street.$error.required }">
+            <div class="form-group" ng-class="{'has-error' : showValidation && (step3Form.street.$error.required || step3Form.street.$error.invalid) }">
               <label>{{::translateEventForm('step3', 'street')}}</label>
               <input class="form-control"
                      id="straat"
@@ -103,6 +103,9 @@
                      required />
               <span class="help-block" ng-show="showValidation && step3Form.street.$error.required">
                 {{::translateEventForm('step3', 'street_validate')}}
+              </span>
+              <span class="help-block" ng-show="showValidation && step3Form.street.$error.invalid">
+                {{::translateEventForm('step3', 'street_validate_long')}}
               </span>
             </div>
           </div>
