--- a/src/search/ui/event.directive.html
+++ b/src/search/ui/event.directive.html
@@ -74,6 +74,10 @@
         {{language.lang}}
       </button>
     </div>
+
+    <div ng-if="resultViewer.activeSpecific.id === 'accessibility'" class="rv-event-info-accessibility">
+      <udb-offer-accessibility-info offer="event" offer-type="offerType"></udb-offer-accessibility-info>
+    </div>
   </div>
 
   <div class="col-sm-12" ng-show="eventCtrl.translation">
