--- a/src/search/ui/place.directive.html
+++ b/src/search/ui/place.directive.html
@@ -61,22 +61,8 @@
       </button>
     </div>
 
-    <div class="rv-event-info-accessibility" ng-show="resultViewer.activeSpecific.id === 'accessibility'">
-      <div ng-if="event.facilities.length > 0">
-        <ul>
-          <li ng-repeat="facility in event.facilities" ng-bind="::facility.label"></li>
-        </ul>
-
-        <button type="button" class="btn btn-link" ng-click="placeCtrl.changeFacilities()">
-          Wijzigen
-        </button>
-      </div>
-
-      <div ng-show="event.facilities.length === 0">
-        <button type="button" class="btn btn-primary" ng-click="placeCtrl.changeFacilities()">
-          Voorziening toevoegen
-        </button>
-      </div>
+    <div ng-if="resultViewer.activeSpecific.id === 'accessibility'" class="rv-event-info-accessibility">
+      <udb-offer-accessibility-info offer="event" offer-type="offerType"></udb-offer-accessibility-info>
     </div>
   </div>
 
